--- a/api/composer.json
+++ b/api/composer.json
@@ -32,6 +32,7 @@
     },
     "require-dev": {
         "api-platform/schema-generator": "^5.0",
+        "pestphp/pest": "^3.7",
         "symfony/browser-kit": "7.2.*",
         "symfony/css-selector": "7.2.*",
         "symfony/debug-bundle": "7.2.*",
@@ -48,6 +49,7 @@
         },
         "sort-packages": true,
         "allow-plugins": {
+            "pestphp/pest-plugin": true,
             "symfony/flex": true,
             "symfony/runtime": true
         }
