--- a/api/composer.json
+++ b/api/composer.json
@@ -13,6 +13,7 @@
         "nelmio/cors-bundle": "^2.2",
         "phpstan/phpdoc-parser": "^2.0",
         "runtime/frankenphp-symfony": "^0.2",
+        "stof/doctrine-extensions-bundle": "^1.13",
         "symfony/asset": "7.2.*",
         "symfony/console": "7.2.*",
         "symfony/dotenv": "7.2.*",
