--- a/api/composer.json
+++ b/api/composer.json
@@ -41,7 +41,8 @@
         "symfony/phpunit-bridge": "7.2.*",
         "symfony/stopwatch": "7.2.*",
         "symfony/var-dumper": "7.2.*",
-        "symfony/web-profiler-bundle": "7.2.*"
+        "symfony/web-profiler-bundle": "7.2.*",
+        "symplify/config-transformer": "^12.4"
     },
     "config": {
         "optimize-autoloader": true,
