--- a/api/composer.json
+++ b/api/composer.json
@@ -15,6 +15,7 @@
         "runtime/frankenphp-symfony": "^0.2",
         "stof/doctrine-extensions-bundle": "^1.13",
         "symfony/asset": "7.2.*",
+        "symfony/clock": "7.2.*",
         "symfony/console": "7.2.*",
         "symfony/dotenv": "7.2.*",
         "symfony/expression-language": "7.2.*",
