Enable soft delete on all entities

--- a/api/config/packages/doctrine.yaml
+++ b/api/config/packages/doctrine.yaml
@@ -26,6 +26,10 @@ doctrine:
                 alias: App
         controller_resolver:
             auto_mapping: false
+        filters:
+            softdeleteable:
+                class: 'Gedmo\SoftDeleteable\Filter\SoftDeleteableFilter'
+                enabled: true
 
 when@test:
     doctrine:
