--- a/api/config/packages/stof_doctrine_extensions.yaml
+++ b/api/config/packages/stof_doctrine_extensions.yaml
@@ -4,4 +4,5 @@ stof_doctrine_extensions:
     default_locale: en_GB
     orm:
         default:
+            softdeleteable: true
             timestampable: true
