--- a/api/config/packages/stof_doctrine_extensions.yaml
+++ b/api/config/packages/stof_doctrine_extensions.yaml
@@ -4,5 +4,6 @@ stof_doctrine_extensions:
     default_locale: en_GB
     orm:
         default:
+            loggable: true
             softdeleteable: true
             timestampable: true
